Fri Jan 23 02:28:58 2004  Tim Janik  <timj@gtk.org>

	* bsecxxplugin.h: complete record and sequence registration macros.

	* bseexports.h: boxed types supply SfiBoxedFields.

	* bsetype.h: fixed sfidl pspec constructors.

Wed Jan 21 03:35:59 2004  Tim Janik  <timj@gtk.org>

	* bsecxxplugin.h (BSE_CXX_DECLARE_RECORD): implementation fixups.

Tue Jan 20 15:30:44 2004  Tim Janik  <timj@gtk.org>

	* bseexports.h: added BseExportNodeBoxed for records and
	sequences.

	* bseparam.c:
	* bseglue.c: honour sfi_boxed_type_get_fields().

	* bseplugin.[hc]: implement un-initialization of types
	upon unloading (needed by boxed). added BSE_EXPORT_NODE_RECORD
	and BSE_EXPORT_NODE_SEQUENCE handling.

	* bsetype.[hc]: implement dynamic boxed.

	* bsecxxplugin.h: started implementing RECORD type registration.

Tue Jan 20 05:47:04 2004  Tim Janik  <timj@gtk.org>

	* bsesniffer.cc: adapt to C++ type changes.

Tue Jan 20 04:52:45 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* bserecords.idl bseamplifier.idl: Add "using namespace Sfi;".

Tue Jan 20 03:05:25 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* bsecxxsmart.h Makefile.am: Removed obsolete code.

	* tests/testsmart.cc tests/Makefile.am: Removed test for obsolete
	code.

Tue Jan 20 00:58:49 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* bsecxxsmart.h: Remove redundant typedefs (now in sfi/sficxx.h).

Mon Jan 19 20:31:28 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* Makefile.am bseprocidl.c: Exclude types which are from bse.idl (and
	not define from bsehack.idl) automatically, instead of maintaining a
	type list in bseprocidl (uses sfidl --list-types).

Mon Jan 19 18:54:11 2004  Tim Janik  <timj@gtk.org>

	* Makefile.am: generate bsehack.idl from procidl.
	made bse.idl the canonical client-binding API idl file.

	* bsecxxutils.h: provide assert_ptr_derivation().

	* bsecxxvalue.h: use assert_ptr_derivation() in
	g_value_get_object<>() to fix object offset.

	* bsemidireceiver.cc: fix assertion.
